--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,3 @@
-
-  
 <!DOCTYPE html>
 <html lang="en">
 
@@ -90,23 +88,23 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="https://twitter.com/1offmark?s=09" target="_blank">
+              <a href="https://twitter.com/maina_jolly" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
-            <li class="list-inline-item">
+            <!-- <li class="list-inline-item">
               <a href="https://www.instagram.com/1offmark/" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
-            </li>
+            </li> -->
             <li class="list-inline-item">
-              <a href="https://github.com/MachariaMark" target="_blank">
+              <a href="https://github.com/Hariettemaina" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
